--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </head>
 <body>
   <div class="sidebar">
-    <h2>Mark Pérez</h2>
-    <p>Email: mark@email.com</p>
-    <p>LinkedIn: <a href="#">linkedin.com/in/markperez</a></p>
-    <p>GitHub: <a href="#">github.com/markperez</a></p>
+    <h2>Andrés Chivalán</h2>
+    <p>Email: markporque528@email.com</p>
   </div>
 
   <div class="main-content" id="terminal">
     <!-- Contenido progresivo -->
     <pre class="line">[Accediendo a archivos del portafolio...]</pre>
-    <pre class="line">Nombre: Mark Pérez</pre>
+    <pre class="line">Nombre: Andrés Chivalán</pre>
     <pre class="line">Rol: Desarrollador Full Stack</pre>
     <pre class="line"></pre>
     <pre class="line">
